@@ -4,6 +4,11 @@ herbstluftwm NEWS -- History of user-visible changes
 See the link:MIGRATION[] file for changes that introduced incompatibility to
 older versions.
 
+Current git version
+-------------------
+
+  * A child object 'focused_client' for each tag object.
+
 Release 0.9.0 on 2020-10-31
 ---------------------------
 
